--- a/matrixmpp.cabal
+++ b/matrixmpp.cabal
@@ -15,18 +15,26 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Operators
+                     , Lib
   build-depends:       base >= 4.7 && < 5
+                     , base-unicode-symbols
+                     , containers-unicode-symbols
   default-language:    Haskell2010
   ghc-options:         -Wall
+  default-extensions:  UnicodeSyntax PackageImports QuasiQuotes
 
 executable matrixmpp
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:  UnicodeSyntax PackageImports QuasiQuotes
   build-depends:       base
+                     , base-unicode-symbols
+                     , containers-unicode-symbols
                      , matrixmpp
                      , pontarius-xmpp
+                     , yaml
   default-language:    Haskell2010
 
 test-suite matrixmpp-test
@@ -34,8 +42,11 @@ test-suite matrixmpp-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , base-unicode-symbols
+                     , containers-unicode-symbols
                      , matrixmpp
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  default-extensions:  UnicodeSyntax PackageImports QuasiQuotes
   default-language:    Haskell2010
 
 source-repository head
