--- a/matrixmpp.cabal
+++ b/matrixmpp.cabal
@@ -20,6 +20,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , base-unicode-symbols
                      , containers-unicode-symbols
+                     , qm-interpolated-string
   default-language:    Haskell2010
   ghc-options:         -Wall
   default-extensions:  UnicodeSyntax PackageImports QuasiQuotes
@@ -33,6 +34,7 @@ executable matrixmpp
                      , base-unicode-symbols
                      , containers-unicode-symbols
                      , matrixmpp
+                     , qm-interpolated-string
                      , pontarius-xmpp
                      , yaml
   default-language:    Haskell2010
@@ -45,6 +47,7 @@ test-suite matrixmpp-test
                      , base-unicode-symbols
                      , containers-unicode-symbols
                      , matrixmpp
+                     , qm-interpolated-string
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-extensions:  UnicodeSyntax PackageImports QuasiQuotes
   default-language:    Haskell2010
